css added in header

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -128,4 +128,16 @@
     .custom-modal .ui-select-bootstrap .selected-item .ng-hide,.custom-modal .ui-select-bootstrap .selected-item{
         display: block!important;
     }
+    .ng-confirm-box .ng-confirm-title {
+            font-size: 22px !important;
+            color: #344051 !important;
+            font-weight: 700 !important;
+        }
+        .ng-confirm-bg{
+            background-color: #000!important;
+            opacity: 0.5!important;
+        }
+        .alert-orange{
+            background: linear-gradient(to bottom, #ffa15c 1%, #ff6d41 100%)!important; 
+        }
 </style>
