--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -196,7 +196,7 @@
             </div>
 
             <div class="msg-post"  ui-sref="app.chats">
-                <img src="../assets/img/message.png" alt="message" />
+                <img src="../assets/img/chat-icon.png" alt="message" />
             </div>
 
         </div>
@@ -412,7 +412,7 @@
                     </div>
 
                     <div class="msg-post" ng-click="goprochat();">
-                        <img src="../assets/img/message.png" alt="message" />                 
+                        <img src="../assets/img/chat-icon.png" alt="message" />                 
                     </div>
 
                 </div>
