--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="right-wrapper">
+    <div class="right-wrapper" ng-if="friendsandfollowers.followers.length > 0">
         <div class="right-title">
             <h4>Followers</h4>
         </div>
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-        <div class="right-wrapper">
+        <div class="right-wrapper" ng-if="friendsandfollowers.friends.length > 0">
         <div class="right-title">
             <h4>Recent Members</h4>
         </div>
@@ -129,7 +129,7 @@
         </div>
     </div>
 
-    <div class="right-wrapper">
+    <div class="right-wrapper" ng-if="friendsandfollowers.friends.length > 0">
         <div class="right-title">
             <h4>Recent Members</h4>
         </div>
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <div class="right-wrapper">
+    <div class="right-wrapper" ng-if="friendsandfollowers.followers.length > 0">
         <div class="right-title">
             <h4>Followers</h4>
         </div>
