--- a/angular/tpl/blocks/modals/broadcastModal.html
+++ b/angular/tpl/blocks/modals/broadcastModal.html
@@ -6,8 +6,8 @@
                 <div class="col-lg-4 col-md-4">
                     <h3><i class="fa fa-bolt"></i> Broadcast</h3>
                 </div>
-                <div class="col-lg-4 col-md-4 ml-15 flex-center">
-                    <div class="dropdown-label">Category</div>
+                <div class="col-lg-4 col-md-4 ml-15">
+                    <h6 class="text-white mb-5"> Category</h6>
                     <ui-select ng-model="broadcastData.category" theme="bootstrap" ng-change="resetFeedItems()" search-enabled="false">
                         <ui-select-match allow-clear="true" class="selected-item float-lt">
                             <p><i class="fa fa-circle-o"></i> {{broadcastData.category ? broadcastData.category : 'Select Category'}}</p>
@@ -113,7 +113,7 @@
         </div>
 
         <!-- Modal footer -->
-        <div class="custom-modal-footer text-right">
+        <div class="custom-modal-footer text-right mb-30">
             <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
             <button type="submit" class="btn success-btn ml-30">Publish Item</button>
         </div>
