--- a/angular/tpl/blocks/modals/collaborateModal.html
+++ b/angular/tpl/blocks/modals/collaborateModal.html
@@ -9,7 +9,7 @@
                     <h3>COLLABORATION PROJECT</h3>
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
-                    <div class="dropdown-label">Service</div>
+                    <h6 class="text-white mb-5"> Service</h6>
                     <ui-select ng-model="formData.type" ng-change="resetProductItems()" search-enabled="false">
                         <ui-select-match allow-clear="true" class="selected-item float-lt">
                             <p><i class="fa fa-circle-o"></i> {{formData.type ? formData.type : 'Select Category'}}</p>
@@ -129,18 +129,17 @@
                             <div class="form-column">
                                 <label class="control-label left">Deadline</label>
                                 <datepicker date-format="yyyy-MM-dd" selector="form-control">
-                                    <div class="input-group">
-                                        <span class="input-group-addon">
-                                        <i class="fa fa-lg fa-calendar"></i></span>
+                                    <div class="input-group inner-addon left-addon">
+                                        <i class="fa fa-calendar"></i>
                                         <input type="text" class="form-control" placeholder="Deadline" ng-model='formData.projectdeadline' ng-disabled="!formData.type" name="deadline" required />
+                                        <span class="error error-text" ng-if="deadlineerror">Choose Deadline</span>
 
                                     </div>
                                 </datepicker>
-                                <span class="error error-text" ng-if="deadlineerror">Choose Deadline</span>
                             </div>
                         </div>
 
-                        <div class="form-group mt-30">
+                        <div class="form-group mt-30 mb-30">
                             <div class="col-lg-4 col-md-4 pull-right">
 
                                 <button type="button" class="btn silver-btn block-btn" ng-click="changeactiveDiv('members');">Add Members</button>
@@ -180,7 +179,7 @@
                             </div>                            
                         </div>
 
-                        <div class="form-group mt-30">
+                        <div class="form-group mt-30 mb-30">
                             <div class="col-lg-4 col-md-4 pull-right">
                                 <button type="button" class="btn silver-btn block-btn" ng-click="changeactiveDiv('info');">Back to Info</button>
                             </div>
@@ -192,7 +191,7 @@
             </div>
 
             <!-- Modal footer -->
-            <div class="custom-modal-footer text-right">
+            <div class="custom-modal-footer text-right mb-30">
                 <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
                 <button type="submit" class="btn success-btn ml-30">Publish Item</button>
             </div>
