--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -7,8 +7,8 @@
                 <div class="col-lg-4 col-md-4">
                     <h3>REQUEST FOR SERVICES</h3>
                 </div>
-                <div class="col-lg-4 col-md-4 ml-15 flex-center">
-                    <div class="dropdown-label">Type Of Service</div>
+                <div class="col-lg-4 col-md-4 ml-15">
+                    <h6 class="text-white mb-5"> Type Of Service</h6>
                     <ui-select ng-model="formData.request_type" theme="bootstrap" ng-change="resetProductItems()" search-enabled="false" onkeypress="return false;" onfocus="blur();" ng-readonly="!$select.searchEnabled">
                         <ui-select-match allow-clear="true" class="selected-item float-lt">
                             <p><i class="fa fa-circle-o"></i> {{formData.request_type ? formData.request_type : 'Service Type'}}</p>
@@ -17,9 +17,11 @@
                             <span ng-bind-html="type | highlight: $select.search"></span>
                         </ui-select-choices>
                     </ui-select>
+
                 </div>
-                <div class="col-lg-4 col-md-4 ml-15 flex-center">
-                    <div class="dropdown-label">Category</div>
+                <div class="col-lg-4 col-md-4 ml-15">
+                    <h6 class="text-white mb-5">Category</h6>
+
                     <ui-select ng-model="formData.request_category" theme="bootstrap" ng-change="resetProductItems()" search-enabled="false" tooltip-placement="left" tooltip-html="formData.categoryText" tooltip-append-to-body="true" tooltip-trigger="ishover">
                         <ui-select-match allow-clear="true" class="selected-item">
                             <p><i class="fa fa-circle-o"></i> {{formData.request_category ? formData.request_category : 'Select Category'}}</p>
@@ -29,7 +31,13 @@
                         </ui-select-choices>
                     </ui-select>
 
+                    <div class="custom-tooltip tooltip-right mt-30 r-0" ng-show="showCatError">
+                        <div class="custom-tooltip-inner">
+                            Select Category
+                        </div>                    
+                    </div>
                 </div>
+
             </div>
         </div>
 
@@ -45,7 +53,13 @@
                                 <input class="magic-checkbox" type="checkbox" name="isaccept" id="note" ng-true-value="1" ng-false-value="0" ng-model="formData.isaccept" required ng-disabled="!formData.request_type" />
                                 <label class="text font-s" for="note" tooltip="{{categoryText}}" tooltip-is-open="ishover && !formData.isaccept && formData.request_category" tooltip-placement="right">Read and agreed to the TSA Protection Scheme</label>
                             </div>
+
                         </div>
+                        <div class="custom-tooltip tooltip-right mt-30 r-0">
+                                <div class="custom-tooltip-inner">
+                                    Select Category
+                                </div>                    
+                            </div>
 
                         <div class="form-group mt-30 mb-0">
                             <label class="control-label">Add Images</label>
@@ -199,7 +213,7 @@
         </div>
 
         <!-- Modal footer -->
-        <div class="custom-modal-footer text-right">
+        <div class="custom-modal-footer text-right mb-30">
             <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
             <button type="submit" class="btn success-btn ml-30" ng-disabled="!formData.isaccept && formData.request_type">Publish Item</button>
         </div>
