--- a/angular/tpl/blocks/modals/todoModal.html
+++ b/angular/tpl/blocks/modals/todoModal.html
@@ -9,7 +9,7 @@
                     <h3>Todo</h3>
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
-                    <div class="dropdown-label">Type</div>
+                    <h6 class="text-white mb-5">Type</h6>
                     <ui-select ng-model="todoData.type" theme="bootstrap" ng-change="resetTodoItems()" search-enabled="false">
                         <ui-select-match allow-clear="true" class="selected-item float-lt">
                             <p><i class="fa fa-circle-o"></i> {{todoData.type ? todoData.type : 'Select type'}}</p>
@@ -148,7 +148,7 @@
             </div>
 
             <!-- Modal footer -->
-            <div class="custom-modal-footer text-right">
+            <div class="custom-modal-footer text-right mb-30">
                 <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
                 <button type="submit" class="btn success-btn ml-30">Publish Item</button>
             </div>
