excel changes committed

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -126,5 +126,10 @@
 <style type="text/css">
    .form-group .control-label {
         text-transform: capitalize;;
-    }
+    }.modal-open {
+  padding-right: 0 !important;
+}
+html {
+  overflow-y: scroll !important;
+}
 </style>
