--- a/angular/tpl/desktop/projectlist.html
+++ b/angular/tpl/desktop/projectlist.html
@@ -6,7 +6,7 @@
                 <div class="topbar">
                     <div class="topbar-left">
                         <i class="fa fa-list-alt"></i>
-                        <h2 class="text-capitalize">Project List</h2>
+                        <h2 class="text-capitalize">My Projects</h2>
                     </div>
                     <div class="topbar-right">
                         <ul class="topbar-list">
