--- a/angular/tpl/desktop/feeds.html
+++ b/angular/tpl/desktop/feeds.html
@@ -6,7 +6,7 @@
                 <div class="topbar">
                     <div class="topbar-left">
                         <i class="fa fa-rss" aria-hidden="true"></i>
-                        <h2>Feeds</h2>
+                        <h2>My Feeds</h2>
                     </div>
                     <div class="topbar-right">
                         <ul class="topbar-list">
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="row mt-15" ng-if="activetab == 'myfeed'">
-            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in myfeeds.data | itemsPerPage: totalPerPage" total-items="myfeeds.total" pagination-id="myfeed-pagination" current-page="myfeedpagination.current" >
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in myfeeds.data | itemsPerPage: totalPerPage" total-items="myfeeds.total" pagination-id="myfeed-pagination" current-page="myfeedpagination.current">
                 <div class="table-card">
                     <div class="flex-top-space">
                         <div class="table-img" ui-sref="app.viewfeed({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
@@ -56,7 +56,7 @@
                         <div class="table-option">
 
                             <a ng-click="sharefeedtosocial(data)"><i class="fa fa-share"></i></a>
-                            <a ng-click="removefeed(key,data.id)"><i class="fa fa-minus-circle"></i></a></a>
+                            <a ng-click="removefeed(key,data.id)"><i class="fa fa-minus-circle"></i></a>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="row mt-15" ng-if="activetab == 'wishedfeed'">
-            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in wishedfeeds.data | itemsPerPage: totalPerPage" total-items="wishedfeeds.total" current-page="wishedfeedpagination.current"  pagination-id="wishedfeed-pagination">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in wishedfeeds.data | itemsPerPage: totalPerPage" total-items="wishedfeeds.total" current-page="wishedfeedpagination.current" pagination-id="wishedfeed-pagination">
                 <div class="table-card">
                     <div class="flex-top-space">
                         <div class="table-img" ui-sref="app.viewfeed({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
@@ -85,6 +85,13 @@
                         </div>
                     </div>
                     <div class="full-col mt-10">{{data.description | cut:true:120:'..'}}</div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                <div class="topbar">
+                    <div class="topbar-left">
+                        <h2>Follow more members to see great content on your activity stream</h2>
+                    </div>
                 </div>
             </div>
         </div>
