--- a/angular/index.html
+++ b/angular/index.html
@@ -34,7 +34,7 @@
     <!-- Slick slider -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-notify/0.8.0/ng-notify.min.css" />
+    <link rel="stylesheet" href="libs/notify/ng-notify.min.css" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.css" />
     <link rel="stylesheet" href="libs/angular/angular-ui-select/dist/select.min.css" type="text/css" />
     <!-- Slick slider -->
@@ -76,7 +76,7 @@
     <script src="libs/angular/angular-aside/angular-aside.js"></script>
     <script src="libs/angular/angular-button-spinner/dist/angular-button-spinner.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-mocks.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-notify/0.8.0/ng-notify.min.js"></script>
+    <script src="libs/notify/ng-notify.min.js"></script>
     <script src="https://rawgit.com/johannesjo/angular-promise-buttons/master/dist/angular-promise-buttons.min.js"></script>
     <script src="https://w.soundcloud.com/player/api.js"></script>
 
