new commits updated

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -127,4 +127,17 @@
 <div class="loader" ng-if="formLoading || authLoading">
     <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
 </div>
+<style type="text/css">
+    .pagination li.hidePageNav a {
+        opacity: 0;
+    background: #CFD1D3;
+    color: #fff;
+    border-radius: 5px !important;
+    -webkit-border-radius: 5px !important;
+    -moz-border-radius: 5px !important;
+    cursor: default;
+    }.ngn-dismiss {
+        display: block;
+    }
+</style>
 
