--- a/angular/tpl/blocks/modals/collaborateModal.html
+++ b/angular/tpl/blocks/modals/collaborateModal.html
@@ -8,9 +8,9 @@
                 <div class="col-lg-4 col-md-4">
                     <h3>COLLABORATION PROJECT</h3>
                 </div>
-                <div class="col-lg-4 col-md-4 ml-15">
+                <div class="col-lg-2 col-md-2 ml-15">
                     <h6 class="text-white mb-5"> Service</h6>
-                    <ui-select ng-model="formData.type" ng-change="resetProductItems()" search-enabled="false">
+                    <ui-select ng-model="formData.type" ng-change="resetProductItems()" search-enabled="false" ng-required="!formData.type">
                         <ui-select-match allow-clear="true" class="selected-item float-lt">
                             <p><i class="fa fa-circle-o"></i> {{formData.type ? formData.type : 'Select Category'}}</p>
                         </ui-select-match>
@@ -18,13 +18,19 @@
                             <span ng-bind-html="type | highlight: $select.search"></span>
                         </ui-select-choices>
                     </ui-select>
+
+                    <div class="custom-tooltip tooltip-right tooltip-center mt-15" ng-show="showCatError">
+                        <div class="custom-tooltip-inner">
+                            Select Category
+                        </div>                    
+                    </div>
                 </div>
-                <div class="col-lg-4 col-md-4"></div>
+                <div class="col-lg-6 col-md-6"></div>
             </div>
         </div>
 
         <!-- Modal body -->
-        <div class="custom-modal-body">
+        <div class="custom-modal-body" ng-mouseover="showTooltip();" ng-mouseleave="hideTooltip();">
             <div class="row">
 
                 <div class="col-lg-4 col-md-4 br-1">
@@ -127,22 +133,24 @@
                             <div class="form-column"></div>
 
                             <div class="form-column">
+                                <div class="form-group">
                                 <label class="control-label left">Deadline</label>
                                 <datepicker date-format="yyyy-MM-dd" selector="form-control">
-                                    <div class="input-group inner-addon left-addon">
-                                        <i class="fa fa-calendar"></i>
-                                        <input type="text" class="form-control" placeholder="Deadline" ng-model='formData.projectdeadline' ng-disabled="!formData.type" name="deadline" required />
+                                    
+                                        <input type="text" class="form-control input-with-icon" placeholder="Deadline" ng-model='formData.projectdeadline' ng-disabled="!formData.type" name="deadline" required />
+                                        <span class="input-icon">
+                                            <i class="fa fa-lg fa-calendar"></i>
+                                        </span>
                                         <span class="error error-text" ng-if="deadlineerror">Choose Deadline</span>
-
-                                    </div>
                                 </datepicker>
+                                </div>
                             </div>
                         </div>
 
                         <div class="form-group mt-30 mb-30">
                             <div class="col-lg-4 col-md-4 pull-right">
 
-                                <button type="button" class="btn silver-btn block-btn" ng-click="changeactiveDiv('members');">Add Members</button>
+                                <button type="button" class="btn silver-btn block-btn" ng-click="changeactiveDiv('members');" ng-disabled="!formData.type">Add Members</button>
                             </div>
                         </div>
                     </div>
@@ -191,7 +199,7 @@
             </div>
 
             <!-- Modal footer -->
-            <div class="custom-modal-footer text-right mb-30">
+            <div class="custom-modal-footer text-right mb-10">
                 <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
                 <button type="submit" class="btn success-btn ml-30">Publish Item</button>
             </div>
