--- a/angular/tpl/desktop/chats.html
+++ b/angular/tpl/desktop/chats.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15">
+        <div class="row mt-15" ng-if="chatusers.length > 0">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="row mt-15">
-             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" infinite-scroll="loadMoreRecords()" infinite-scroll-distance="0" infinite-scroll-disabled="((formLoading || chatusers.length > 0) && (totalData == chatusers.length))" infinite-scroll-use-document-bottom="true">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" infinite-scroll="loadMoreRecords()" infinite-scroll-distance="0" infinite-scroll-disabled="((formLoading || chatusers.length > 0) && (totalData == chatusers.length))" infinite-scroll-use-document-bottom="true">
                 <div class="table-card" ng-repeat="(key,data) in chatusers">
                     <div class="flex-top-space">
                         <div class="table-img" ng-click="gotochatpage(key,data)">
@@ -51,6 +51,12 @@
                         </div>
                     </div>
                     <div class="full-col mt-10">{{data.lastmessage | cut:true:150:'...'}}</div>
+                </div>
+            </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="chatusers.length  ==  0">
+                <div class="wd-100 text-center white-bg p-15">
+                    <h4>No records Found</h4>
                 </div>
             </div>
         </div>
