--- a/angular/tpl/desktop/friends.html
+++ b/angular/tpl/desktop/friends.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15">
+        <div class="row mt-15" ng-if="friends.total > 0">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
@@ -79,6 +79,11 @@
                         <span><i class="fa fa-circle" ng-class="friend.onlinestatus == 1 ? 'success':'error'"></i> {{friend.onlinestatus == 1 ? 'Online':'Offline'}}</span>
                         <a class="btn default-btn" ng-click="gotoprivatechat(friend.id)"><i class="fa fa-phone-square"></i> Chat</a>
                     </div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="friends.total  ==  0">
+                <div class="wd-100 text-center white-bg p-15">
+                    <h4>No records Found</h4>
                 </div>
             </div>
         </div>
