--- a/angular/tpl/desktop/projectlist.html
+++ b/angular/tpl/desktop/projectlist.html
@@ -60,6 +60,12 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="notifications.total  ==  0">
+                <div class="wd-100 text-center white-bg p-15">
+                    <h4>No records Found</h4>
+                </div>
+            </div>
         </div>
         <div class="row mb-30">
             <div class="col-lg-12 col-md-12 col-sm-12" ng-if="projects.last_page > 0 && !formLoading">
