--- a/angular/tpl/desktop/wishlist.html
+++ b/angular/tpl/desktop/wishlist.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15">
+        <div class="row mt-15" ng-if="wishedproducts.total > 0">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
@@ -59,13 +59,20 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="wishedproducts.total  ==  0">
+                <div class="wd-100 text-center white-bg p-15">
+                    <h4>You have not add any item to wishlist. Currently, there are no record found.</h4>
+                </div>
+            </div>
         </div>
+
         <div class="row mb-30">
             <div class="col-lg-12 col-md-12 col-sm-12" ng-if="wishedproducts.total > 0 && !formLoading">
                 <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
             </div>
         </div>
-        <div class="row mt-15">
+        <div class="row mt-15" ng-if="wishedproducts.total > 0">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar bg-gray">
                     <div class="topbar-left">
@@ -78,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15">
+        <div class="row mt-15" ng-if="wishedproducts.total > 0">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" ng-repeat="(key,data) in comparedproducts">
                 <div class="card compare-card">
                     <div class="card-close">
