--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -127,4 +127,12 @@
 <div class="loader" ng-if="formLoading || authLoading">
     <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
 </div>
+<style type="text/css">
+    .ui-select-bootstrap .selected-item{
+        opacity: 1!important;
+        color: #344051;
+    }.only-service .caret{
+        display: none;
+    }
+</style>
 
