--- a/angular/tpl/desktop/chats.html
+++ b/angular/tpl/desktop/chats.html
@@ -43,10 +43,11 @@
                             </div>
                         </div>
                         <div class="table-option">
-                            <a class="option-img">
-                                <img ng-src="{{data.product.images[0].filetype == 1 ? IMGURL : ''}}{{data.product.images[0].thumbnail}}" ng-if="data.chattype == 1"/>
-                                <img ng-src="{{data.product.files[0].filetype == 1 ? IMGURL : ''}}{{data.product.files[0].thumbnail}}" ng-if="data.chattype == 2"/>
+                            <a class="option-img" background-image="{{data.product.images[0].filetype == 1 ? IMGURL : ''}}{{data.product.images[0].thumbnail}}"  ng-if="data.chattype == 1">
                             </a>
+                            <a class="option-img" background-image="{{data.product.files[0].filetype == 1 ? IMGURL : ''}}{{data.product.files[0].thumbnail}}"  ng-if="data.chattype == 2">
+                            </a>
+                               
                             <a ng-click="removechat(key,data)"><i class="fa fa-minus-circle"></i></a>
                         </div>
                     </div>
