project list updates

--- a/angular/tpl/desktop/projectlist.html
+++ b/angular/tpl/desktop/projectlist.html
@@ -54,7 +54,7 @@
                                 <span class="danger">{{data.remainingdays}} Days Remaining</span>
                             </div>
                         </div>
-                        <div class="table-option">
+                        <div class="table-option no-option">
                             <a ui-sref="app.projectdetails({id:data.id})"><img src="../assets/img/message-icon.png" /></a>
                         </div>
                     </div>
