confirm popup features done

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -133,6 +133,8 @@
         color: #344051;
     }.only-service .caret{
         display: none;
+    }.text-black{
+        color: #000 !important;
     }
 </style>
 
