--- a/angular/tpl/desktop/notification.html
+++ b/angular/tpl/desktop/notification.html
@@ -13,9 +13,9 @@
         <div class="row mt-15 custom-alert">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" infinite-scroll="loadMoreRecords()" infinite-scroll-distance="0" infinite-scroll-disabled="((formLoading || notifications.length > 0) && (totalData == notifications.length))" infinite-scroll-use-document-bottom="true">
                 <div ng-repeat="(key,data) in notifications" ng-class="{ 'accordion' : data.messages.length > 1 }">
-                    <div ng-if="data.messages.length == 1" class="alert alert-dismissible show" role="alert" ng-class="{'alert-primary': (!data.status && data.notificationclass == 1) , 'alert-success': (!data.status && data.notificationclass == 2), 'alert-orange' : (!data.status && data.notificationclass == 3), 'alert-danger' : (!data.status && data.notificationclass == 4) , 'alert-warning' : (!data.status && data.notificationclass == 5)}">
+                    <div ng-if="data.messages.length == 1" class="alert alert-dismissible show" ng-class="{'alert-primary': (!data.status && data.notificationclass == 1) , 'alert-success': (!data.status && data.notificationclass == 2), 'alert-orange' : (!data.status && data.notificationclass == 3), 'alert-danger' : (!data.status && data.notificationclass == 4) , 'alert-warning' : (!data.status && data.notificationclass == 5)}">
                         <i class="fa fa-info-circle" ng-class="{'primary': (data.status && data.notificationclass == 1) , 'success': (data.status && data.notificationclass == 2), 'orange' : (data.status && data.notificationclass == 3), 'danger' : (data.status && data.notificationclass == 4) , 'warning' : (data.status && data.notificationclass == 5)}"></i> <span ng-click="readmessage(data.messages[0],data.notificationtype,'single',key,'0')">{{data.messages[0].message}}</span>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close" ng-click="deletenotification(key,data.messages[0],'single', '0')">
+                        <button type="button" class="close" ng-class="{'text-black': data.status}"  aria-label="Close" ng-click="deletenotification(key,data.messages[0],'single', '0')">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -32,7 +32,7 @@
                             <div class="alert alert-dismissible show" ng-repeat="(no,notification) in data.messages" ng-class="{'alert-primary': (!data.status && data.notificationclass == 1) , 'alert-success': (!data.status && data.notificationclass == 2), 'alert-orange' : (!data.status && data.notificationclass == 3), 'alert-danger' : (!data.status && data.notificationclass == 4) , 'alert-warning' : (!data.status && data.notificationclass == 5)}">
 
                                 <i class="fa fa-info-circle" ng-class="{'primary': (data.status && data.notificationclass == 1) , 'success': (data.status && data.notificationclass == 2), 'orange' : (data.status && data.notificationclass == 3), 'danger' : (data.status && data.notificationclass == 4) , 'warning' : (data.status && data.notificationclass == 5)}"></i> <span ng-click="readmessage(notification,data.notificationtype,'accordion',key,no)">{{notification.message}}</span>
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close" ng-click="deletenotification(key,notification,'accordion',no)">
+                                <button type="button" class="close" ng-class="{'text-black': data.status}" aria-label="Close" ng-click="deletenotification(key,notification,'accordion',no)">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
