--- a/angular/tpl/desktop/wishlist.html
+++ b/angular/tpl/desktop/wishlist.html
@@ -85,7 +85,14 @@
                 </div>
             </div>
         </div>
+
         <div class="row mt-15" ng-if="wishedproducts.total > 0">
+
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="comparedproducts.length  ==  0">
+                <div class="wd-100 text-center white-bg p-15">
+                    <h4>You have not add any item to compared list. Currently, there are no record found.</h4>
+                </div>
+            </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" ng-repeat="(key,data) in comparedproducts">
                 <div class="card compare-card">
                     <div class="card-close">
